<resources>
    <string name="app_name">NavigationAssignment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_converters">Welcome To Converters</string>
    <string name="temparature">Temparature</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="result">Result</string>
    <string name="convert">Convert</string>
    <string name="_32">32</string>
    <string name="_65">65</string>
    <string name="_12">12</string>
    <string name="meter">Meter</string>
    <string name="convert_lenght">Convert Lenght</string>
    <string name="feet">Feet</string>
    <string name="result1">Result!</string>
    <string name="_74">74</string>
    <string name="kilograms">Kilograms</string>
    <string name="_98">98</string>
    <string name="pound">Pound</string>
    <string name="result3">Result?</string>
    <string name="convert_mass">Convert Mass</string>
</resources>
